--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,6 @@ highlighter:         pygments
 #
 # Use of `relative_permalinks` ensures post links from the index work properly.
 permalink:           pretty
-relative_permalinks: true
 
 # Setup
 title:               Greenwood Lab
@@ -24,3 +23,6 @@ author:
 
 # Custom vars
 version:             1.0.0
+
+# Gems
+gems: [jekyll-paginate]
